Avoid column overlapping in table visualizations

--- a/SplunkAppForWazuh/appserver/static/css/styles/common.css
+++ b/SplunkAppForWazuh/appserver/static/css/styles/common.css
@@ -1371,3 +1371,8 @@ input:focus {
   height: 30px;
   border-bottom: 2px solid #4198ec !important;
 }
+
+
+.wz-nowrap {
+  white-space: nowrap;
+}
